--- a/WebAppMixed/Views/_ViewStart.cshtml
+++ b/WebAppMixed/Views/_ViewStart.cshtml
@@ -1,3 +1,19 @@
 ﻿@{
+#if NETFRAMEWORK480
+}
+
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+@{
+#else
+}
+
+@{
     Layout = "_Layout";
+}
+
+@{
+#endif
 }
