--- a/WebAppMixed/Views/Shared/Error.cshtml
+++ b/WebAppMixed/Views/Shared/Error.cshtml
@@ -1,6 +1,29 @@
-﻿@model ErrorViewModel
+﻿@{
+#if NETFRAMEWORK480
+}
+
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Error</title>
+</head>
+<body>
+<hgroup>
+    <h1>Error.</h1>
+    <h2>An error occurred while processing your request.</h2>
+</hgroup>
+</body>
+</html>
+
 @{
-    ViewData["Title"] = "Error";
+    #else
+}
+
+
+@model ErrorViewModel
+@{
+        ViewData["Title"] = "Error";
 }
 
 <h1 class="text-danger">Error.</h1>
@@ -8,9 +31,9 @@
 
 @if (Model.ShowRequestId)
 {
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
+<p>
+    <strong>Request ID:</strong> <code>@Model.RequestId</code>
+</p>
 }
 
 <h3>Development Mode</h3>
@@ -23,3 +46,7 @@
     For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
     and restarting the app.
 </p>
+
+@{
+    #endif
+}
