--- a/WebAppMixed/Views/Shared/_Layout.cshtml
+++ b/WebAppMixed/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using WebAppMvc
+
+@{
 #if NETFRAMEWORK480
 }
 
@@ -35,7 +37,7 @@
     @RenderBody()
     <hr />
     <footer>
-        <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+        <p>&copy; @DateTime.Now.Year - My ASP.NET Application - @StartupHelper.GetNetVersion()</p>
     </footer>
 </div>
 
@@ -88,8 +90,7 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2020 - WebAppMvc - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        <a> - @Startup.GetNetVersion() </a>
+        &copy; 2020 - WebAppMvc - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> - @StartupHelper.GetNetVersion()
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
